[package]
name = "egui-baseview"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
description = "A baseview backend for egui"
license = "MIT"
repository = "https://github.com/BillyDM/egui-baseview"
documentation = "https://docs.rs/egui-baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opengl"]
opengl = ["egui_glow", "baseview/opengl"]

[dependencies]
egui = { git = "https://github.com/ingo-dsp/egui.git", branch="develop-ingo" }
egui_glow = { git = "https://github.com/ingo-dsp/egui.git", branch="develop-ingo", optional = true }
keyboard-types = { version = "0.6.1", default-features = false }
baseview = { path = "/home/ingo/git/extern/ingodsp-baseview" }
raw-window-handle = "0.4.2"
copypasta = "0.8"
